--- a/package.json
+++ b/package.json
@@ -21,5 +21,11 @@
   "main": "binaryheap.js",
   "engines": {
     "node": ">= 0.6.0"
+  },
+  "scripts": {
+    "test": "node test"
+  },
+  "devDependencies": {
+    "tap": ">= 0.4.0"
   }
 }
